    (Madhukara Phatak via eli)

    HADOOP-8533. Remove parallel call ununsed capability in RPC.
    (Brandon Li via suresh)

    HADOOP-8423. MapFile.Reader.get() crashes jvm or throws
    EOFException on Snappy or LZO block-compressed data
    (todd via harsh)

    HADOOP-8541. Better high-percentile latency metrics. (Andrew Wang via atm)

  BUG FIXES

    HADOOP-8372. NetUtils.normalizeHostName() incorrectly handles hostname
    starting with a numeric character. (Junping Du via suresh)

    HADOOP-8393. hadoop-config.sh missing variable exports, causes Yarn jobs 
    to fail with ClassNotFoundException MRAppMaster. (phunt via tucu)

    HADOOP-8316. Audit logging should be disabled by default. (eli)

    HADOOP-8400. All commands warn "Kerberos krb5 configuration not found" 
    when security is not enabled. (tucu)

    HADOOP-8406. CompressionCodecFactory.CODEC_PROVIDERS iteration is
    thread-unsafe (todd)

    HADOOP-8287. etc/hadoop is missing hadoop-env.sh (eli)

    HADOOP-8408. MR doesn't work with a non-default ViewFS mount table
    and security enabled. (atm via eli)

    HADOOP-8329. Build fails with Java 7. (eli)

    HADOOP-8268. A few pom.xml across Hadoop project
    may fail XML validation. (Radim Kolar via harsh)

    HADOOP-8444. Fix the tests FSMainOperationsBaseTest.java and
    FileContextMainOperationsBaseTest.java to avoid potential
    test failure (Madhukara Phatak via harsh)

    HADOOP-8452. DN logs backtrace when running under jsvc and /jmx is loaded 
    (Andy Isaacson via bobby)

    HADOOP-8460. Document proper setting of HADOOP_PID_DIR and 
    HADOOP_SECURE_DN_PID_DIR (bobby)

    HADOOP-8466. hadoop-client POM incorrectly excludes avro. (bmahe via tucu)

    HADOOP-8481. update BUILDING.txt to talk about cmake rather than autotools.
    (Colin Patrick McCabe via eli)

    HADOOP-8485. Don't hardcode "Apache Hadoop 0.23" in the docs. (eli)

    HADOOP-8488. test-patch.sh gives +1 even if the native build fails.